// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryGrid it at least shallow renders and match snapshot 1`] = `
<div
  className="CategoryGrid"
>
  <Category
    Category={
      Object {
        "discipline": "Architecture",
        "firm": Object {
          "name": "Avitru",
        },
        "id": "b686f1e0-16ca-4b40-bf17-a5269f3a1cec",
        "name": "Administration",
        "selected": false,
      }
    }
    key="b686f1e0-16ca-4b40-bf17-a5269f3a1cec"
  />
</div>
`;

exports[`CategoryGrid it handles a query error 1`] = `
<div>
  Error
</div>
`;

exports[`CategoryGrid it handles a query loading 1`] = `
<div>
  Loading
</div>
`;
